# SodeApp

./: GestionBebidas.spec  README.md  app.spec  buildozer.spec  controlador.py  distribucion_bebidas.db  ejecutar_sistema.bat  graficos.py  hook-kivy.py  instalar.bat  install.py  main.py  main_mobile.py  manual_usuario.md  modelo.py  pyproject.toml  requirements.txt  setup.py  utilidades.py  vista.py
